--- a/index.html
+++ b/index.html
@@ -1,12 +1,104 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Седона</title>
-  </head>
-  <body>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
+<head>
+  <meta charset="utf-8">
+  <title>Седона</title>
+</head>
 
-  </body>
+<body>
+  <header>
+    <nav>
+      <a>
+        <img src="https://via.placeholder.com/138x70"  alt="Логотип городка Седона">
+      </a>
+      <ul>
+        <li><a href="blank.html">Информация</a></li>
+        <li><a href="blank.html">Фото и видео</a></li>
+        <li><a href="blank.html">Карта штата</a></li>
+        <li><a href="hotels.html">Гостиницы</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <section class="description">
+      <h1>Седона - небольшой городок в Аризоне, <br>заслуживающий большего!</h1>
+      <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
+    </section>
+    <section class="reasons">
+      <h2 class="hidden">Почему надо посетить городок Седона</h2>
+      <ol>
+        <li>
+          <h3>Настоящий<br>городок</h3>
+          <p>— №1 —</p>
+          <p>Седона - не аттракцион для туристов, там течёт своя жизнь</p>
+        </li>
+        <li>
+          <h3>Там есть<br>Мост дьявола</h3>
+          <p>— №2 —</p>
+          <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+        </li>
+        <li>
+          <h3>небольшая<br>площадь</h3>
+          <p>— №3 —</p>
+          <p>все достопримечательности<br>находятся очень близко</p>
+        </li>
+        <li>
+          <h3>красивая<br>дорога</h3>
+          <p>— №4 —</p>
+          <p>ехать в седону из лас-вегаса совсем<br>не скучно!</p>
+        </li>
+        <li>
+          <h3>мало<br>туристов</h3>
+          <p>— №5 —</p>
+          <p>большинство едет в гранд каньон<br>и толпится там</p>
+        </li>
+      </ol>
+    </section>
+    <section>
+      <h2 class="hidden">Поиск гостиницы в Седоне</h2>
+      <p>Заинтересовались</p>
+      <p>Укажите предполагаемые даты поездки, <br>и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+      <button type="button">Поиск гостиницы в Седоне</button>
+    </section>
+
+    <img src="https://via.placeholder.com/1199x594" alt="Карта">
+  </main>
+  <footer>
+    <section>
+      <h2 class="hidden">Контакты.</h2>
+      <p>
+        <a href="#">#visitSEDONA</a><br>
+        ТЕЛ: <a href="tel:+74956660166">+7 (495) 666-01-66</a>
+      </p>
+    </section>
+    <section>
+      <h2 class="hidden">Мы в социальных сетях.</h2>
+      <ul>
+        <li>
+          <a href="#">Твиттер</a>
+        </li>
+        <li>
+          <a href="#">Фейсбук</a>
+        </li>
+        <li>
+          <a href="#">Ютуб</a>
+        </li>
+      </ul>
+    </section>
+    <section>
+      <h2 class="hidden">Разработчики сайта.</h2>
+      <p>
+        Website by
+        <a href="https://htmlacademy.ru">HTML Academy</a>
+      </p>
+    </section>
+  </footer>
+  <section>
+    <h2 class="hidden">Поиск гостиницы в Седоне</h2>
+    <!-- Здесь будет форма поиска -->
+    <button type="button">Найти</button>
+  </section>
+</body>
+
 </html>
