--- a/index.html
+++ b/index.html
@@ -59,10 +59,9 @@
       <h2 class="hidden">Поиск гостиницы в Седоне</h2>
       <p>Заинтересовались</p>
       <p>Укажите предполагаемые даты поездки, <br>и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-      <button type="button">Поиск гостиницы в Седоне</button>
+      <a href="blank.html">Поиск гостиницы в Седоне</a>
     </section>
-
-    <img src="https://via.placeholder.com/1199x594" alt="Карта">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52385.18050600227!2d-111.83015813851428!3d34.85437338099179!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1599930496020!5m2!1sru!2sru" width="1199" height="594" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
   </main>
   <footer>
     <section>
