Разметка внутренней страницы
Исправление замечаний на главной странице и странице hotels

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <header>
     <nav>
       <a>
-        <img src="https://via.placeholder.com/138x70"  alt="Логотип городка Седона">
+        <img src="https://via.placeholder.com/138x70" width="138" height="70" alt="Логотип городка Седона">
       </a>
       <ul>
         <li><a href="blank.html">Информация</a></li>
@@ -22,46 +22,64 @@
   </header>
   <main>
     <section class="description">
-      <h1>Седона - небольшой городок в Аризоне, <br>заслуживающий большего!</h1>
-      <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
+      <h1>Седона&nbsp;&mdash; небольшой городок в&nbsp;Аризоне, заслуживающий большего!</h1>
+      <p>Рассмотрим 5&nbsp;причин, по&nbsp;которым Седона круче, чем Гранд Каньон!</p>
     </section>
     <section class="reasons">
       <h2 class="hidden">Почему надо посетить городок Седона</h2>
       <ol>
         <li>
-          <h3>Настоящий<br>городок</h3>
+          <h3>Настоящий городок</h3>
           <p>— №1 —</p>
-          <p>Седона - не аттракцион для туристов, там течёт своя жизнь</p>
+          <p>Седона&nbsp;&mdash; не&nbsp;аттракцион для туристов, там течёт своя жизнь</p>
+          <ul>
+            <li>
+              <h4>Жильё</h4>
+              <p>Рекомендуем пожить в&nbsp;настоящем мотеле, всё как в&nbsp;кино!</p>
+            </li>
+            <li>
+              <h4>Еда</h4>
+              <p>Всегда заказывайте фирменный бургер, вы&nbsp;не&nbsp;разочаруетесь!</p>
+            </li>
+            <li>
+              <h4>Сувениры</h4>
+              <p>Не&nbsp;только китайского, но&nbsp;и&nbsp;местного производства!</p>
+            </li>
+          </ul>
         </li>
         <li>
-          <h3>Там есть<br>Мост дьявола</h3>
+          <h3>Там есть Мост дьявола</h3>
           <p>— №2 —</p>
-          <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+          <p>Да, по&nbsp;нему можно пройти! Если конечно вы&nbsp;осмелитесь</p>
         </li>
         <li>
-          <h3>небольшая<br>площадь</h3>
+          <h3>небольшая площадь</h3>
           <p>— №3 —</p>
-          <p>все достопримечательности<br>находятся очень близко</p>
+          <p>все достопримечательности находятся очень близко</p>
         </li>
         <li>
-          <h3>красивая<br>дорога</h3>
+          <h3>красивая дорога</h3>
           <p>— №4 —</p>
-          <p>ехать в седону из лас-вегаса совсем<br>не скучно!</p>
+          <p>ехать в&nbsp;седону из&nbsp;лас-вегаса совсем не&nbsp;скучно!</p>
         </li>
         <li>
           <h3>мало<br>туристов</h3>
           <p>— №5 —</p>
-          <p>большинство едет в гранд каньон<br>и толпится там</p>
+          <p>большинство едет в&nbsp;гранд каньон и&nbsp;толпится там</p>
         </li>
       </ol>
     </section>
     <section>
-      <h2 class="hidden">Поиск гостиницы в Седоне</h2>
-      <p>Заинтересовались</p>
-      <p>Укажите предполагаемые даты поездки, <br>и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-      <a href="blank.html">Поиск гостиницы в Седоне</a>
+      <h2>Заинтересовались?</h2>
+      <p>Укажите предполагаемые даты поездки, и&nbsp;мы&nbsp;покажем вам лучшие предложения гостиниц в&nbsp;Седоне</p>
+      <button type="button">Поиск гостиницы в Седоне</button>
+      <section>
+        <h2 class="hidden">Поиск гостиницы в Седоне</h2>
+        <!-- Здесь будет форма поиска -->
+        <button type="button">Найти</button>
+      </section>
     </section>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52385.18050600227!2d-111.83015813851428!3d34.85437338099179!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1599930496020!5m2!1sru!2sru" width="1199" height="594" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52385.18050600227!2d-111.83015813851428!3d34.85437338099179!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1599930496020!5m2!1sru!2sru" width="1199" height="594" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
   </main>
   <footer>
     <section>
@@ -93,11 +111,7 @@
       </p>
     </section>
   </footer>
-  <section>
-    <h2 class="hidden">Поиск гостиницы в Седоне</h2>
-    <!-- Здесь будет форма поиска -->
-    <button type="button">Найти</button>
-  </section>
+  
 </body>
 
 </html>
