--- a/hotels.html
+++ b/hotels.html
@@ -10,7 +10,7 @@
   <header>
     <nav>
       <a href="index.html">
-        <img src="https://via.placeholder.com/138x70"  alt="Логотип городка Седона">
+        <img src="https://via.placeholder.com/138x70" width="138" height="70" alt="Логотип городка Седона">
       </a>
       <ul>
         <li><a href="blank.html">Информация</a></li>
@@ -26,11 +26,13 @@
       <button type="button">Показать</button>
     </section>
     <section>
-      <p>Найдено: 3</p>
+      <h3>Найдено: 3</h3>
       <p>Сортировка:</p>
-      <p>По цене</p>
-      <p>По типу</p>
-      <p>По рейтингу</p>
+      <a href="blank.html">По цене</a>
+      <a href="blank.html">По типу</a>
+      <a href="blank.html">По рейтингу</a>
+      <a href="blank.html">&#9650;</a>
+      <a href="blank.html">&#9660;</a>
     </section>
     <section>
       <h1 class="hidden">Отели Седоны</h1>
@@ -38,16 +40,14 @@
         <li>
           <a href="blank.html">
             <h3>Amara Resort & Spa</h3>
-            <p>
-              <img src="https://via.placeholder.com/135x90" width="135" height="90" alt="Amara Resort & Spa">
-            </p>
+            <img src="https://via.placeholder.com/135x90" width="135" height="90" alt="Amara Resort & Spa">
           </a>
           <p>
             Гостиница От 4000 Р.
           </p>
           <p>
             <a href="blank.html">Подробнее</a>
-            <button type="button">Забронировать</button>
+            <a href="blank.html">Забронировать</a>
           </p>
           <p>
             Рейтинг: 8,5
@@ -56,16 +56,14 @@
         <li>
           <a href="blank.html">
             <h3>Desert Quail Inn</h3>
-            <p>
-              <img src="https://via.placeholder.com/135x90" width="135" height="90" alt="Desert Quail Inn">
-            </p>
+            <img src="https://via.placeholder.com/135x90" width="135" height="90" alt="Desert Quail Inn">
           </a>
           <p>
             Мотель От 3000 Р.
           </p>
           <p>
             <a href="blank.html">Подробнее</a>
-            <button type="button">Забронировать</button>
+            <a href="blank.html">Забронировать</a>
           </p>
           <p>
             Рейтинг: 8,9
@@ -74,16 +72,14 @@
         <li>
           <a href="blank.html">
             <h3>Villas at Poco Diablo</h3>
-            <p>
-              <img src="https://via.placeholder.com/135x90" width="135" height="90" alt="Villas at Poco Diablo">
-            </p>
+            <img src="https://via.placeholder.com/135x90" width="135" height="90" alt="Villas at Poco Diablo">
           </a>
           <p>
             Апартаменты От 2000 Р.
           </p>
           <p>
             <a href="blank.html">Подробнее</a>
-            <button type="button">Забронировать</button>
+            <a href="blank.html">Забронировать</a>
           </p>
           <p>
             Рейтинг: 9,2
@@ -95,34 +91,22 @@
   <footer>
     <section>
       <h2 class="hidden">Контакты.</h2>
-      <p>
-        <a href="blank.html">#visitSEDONA</a><br>
-        ТЕЛ: <a href="tel:+74956660166">+7 (495) 666-01-66</a>
-      </p>
+      <a href="blank.html">#visitSEDONA</a><br>
+      ТЕЛ: <a href="tel:+74956660166">+7 (495) 666-01-66</a>
     </section>
     <section>
       <h2 class="hidden">Мы в социальных сетях.</h2>
-      <ul>
-        <li>
-          <a href="#">Твиттер</a>
-        </li>
-        <li>
-          <a href="#">Фейсбук</a>
-        </li>
-        <li>
-          <a href="#">Ютуб</a>
-        </li>
-      </ul>
+      <a href="#">Твиттер</a>
+      <a href="#">Фейсбук</a>
+      <a href="#">Ютуб</a>
     </section>
     <section>
       <h2 class="hidden">Разработчики сайта.</h2>
-      <p>
-        Website by
-        <a href="https://htmlacademy.ru">HTML Academy</a>
-      </p>
+      Website by
+      <a href="https://htmlacademy.ru">HTML Academy</a>
     </section>
   </footer>
-  
+
 </body>
 
 </html>
