--- a/hotels.html
+++ b/hotels.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html class="page" lang="ru">
 
 <head>
   <meta charset="utf-8">
   <title>Отели - Седона</title>
+  <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
+  <link href="normalize.css" rel="stylesheet">
+  <link href="style.css" rel="stylesheet">
 </head>
 
-<body>
-  <header>
-    <nav>
-      <a href="index.html">
+<body class="page-body">
+  <header class="main-header">
+    <nav class="main-navigation">
+      <a class="logo" href="index.html">
         <img src="https://via.placeholder.com/138x70" width="138" height="70" alt="Логотип городка Седона">
       </a>
-      <ul>
+      <ul class="site-navigation">
         <li><a href="blank.html">Информация</a></li>
         <li><a href="blank.html">Фото и видео</a></li>
         <li><a href="blank.html">Карта штата</a></li>
@@ -20,7 +23,7 @@
       </ul>
     </nav>
   </header>
-  <main>
+  <main class="container">
     <section>
       <!-- Фильтр посика. Тут будет форма-->
       <button type="button">Показать</button>
