--- a/index.html
+++ b/index.html
@@ -1,117 +1,121 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html class="page" lang="ru">
 
 <head>
-  <meta charset="utf-8">
-  <title>Седона</title>
+    <meta charset="utf-8">
+    <title>Седона</title>
+    <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
+    <link href="css/normalize.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
 </head>
 
-<body>
-  <header>
-    <nav>
-      <a>
-        <img src="https://via.placeholder.com/138x70" width="138" height="70" alt="Логотип городка Седона">
-      </a>
-      <ul>
-        <li><a href="blank.html">Информация</a></li>
-        <li><a href="blank.html">Фото и видео</a></li>
-        <li><a href="blank.html">Карта штата</a></li>
-        <li><a href="hotels.html">Гостиницы</a></li>
-      </ul>
-    </nav>
-  </header>
-  <main>
-    <section class="description">
-      <h1>Седона&nbsp;&mdash; небольшой городок в&nbsp;Аризоне, заслуживающий большего!</h1>
-      <p>Рассмотрим 5&nbsp;причин, по&nbsp;которым Седона круче, чем Гранд Каньон!</p>
-    </section>
-    <section class="reasons">
-      <h2 class="hidden">Почему надо посетить городок Седона</h2>
-      <ol>
-        <li>
-          <h3>Настоящий городок</h3>
-          <p>— №1 —</p>
-          <p>Седона&nbsp;&mdash; не&nbsp;аттракцион для туристов, там течёт своя жизнь</p>
-          <ul>
-            <li>
-              <h4>Жильё</h4>
-              <p>Рекомендуем пожить в&nbsp;настоящем мотеле, всё как в&nbsp;кино!</p>
-            </li>
-            <li>
-              <h4>Еда</h4>
-              <p>Всегда заказывайте фирменный бургер, вы&nbsp;не&nbsp;разочаруетесь!</p>
-            </li>
-            <li>
-              <h4>Сувениры</h4>
-              <p>Не&nbsp;только китайского, но&nbsp;и&nbsp;местного производства!</p>
-            </li>
-          </ul>
-        </li>
-        <li>
-          <h3>Там есть Мост дьявола</h3>
-          <p>— №2 —</p>
-          <p>Да, по&nbsp;нему можно пройти! Если конечно вы&nbsp;осмелитесь</p>
-        </li>
-        <li>
-          <h3>небольшая площадь</h3>
-          <p>— №3 —</p>
-          <p>все достопримечательности находятся очень близко</p>
-        </li>
-        <li>
-          <h3>красивая дорога</h3>
-          <p>— №4 —</p>
-          <p>ехать в&nbsp;седону из&nbsp;лас-вегаса совсем не&nbsp;скучно!</p>
-        </li>
-        <li>
-          <h3>мало<br>туристов</h3>
-          <p>— №5 —</p>
-          <p>большинство едет в&nbsp;гранд каньон и&nbsp;толпится там</p>
-        </li>
-      </ol>
-    </section>
-    <section>
-      <h2>Заинтересовались?</h2>
-      <p>Укажите предполагаемые даты поездки, и&nbsp;мы&nbsp;покажем вам лучшие предложения гостиниц в&nbsp;Седоне</p>
-      <button type="button">Поиск гостиницы в Седоне</button>
-      <section>
-        <h2 class="hidden">Поиск гостиницы в Седоне</h2>
-        <!-- Здесь будет форма поиска -->
-        <button type="button">Найти</button>
-      </section>
-    </section>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52385.18050600227!2d-111.83015813851428!3d34.85437338099179!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1599930496020!5m2!1sru!2sru" width="1199" height="594" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-  </main>
-  <footer>
-    <section>
-      <h2 class="hidden">Контакты.</h2>
-      <p>
-        <a href="#">#visitSEDONA</a><br>
-        ТЕЛ: <a href="tel:+74956660166">+7 (495) 666-01-66</a>
-      </p>
-    </section>
-    <section>
-      <h2 class="hidden">Мы в социальных сетях.</h2>
-      <ul>
-        <li>
-          <a href="#">Твиттер</a>
-        </li>
-        <li>
-          <a href="#">Фейсбук</a>
-        </li>
-        <li>
-          <a href="#">Ютуб</a>
-        </li>
-      </ul>
-    </section>
-    <section>
-      <h2 class="hidden">Разработчики сайта.</h2>
-      <p>
-        Website by
-        <a href="https://htmlacademy.ru">HTML Academy</a>
-      </p>
-    </section>
-  </footer>
-  
+<body class="page-body">
+    <div class="page-container">
+        <header class="main-header">
+            <nav class="main-navigation">
+                <a class="logo">
+                    <img src="https://via.placeholder.com/138x70" width="138" height="70" alt="Логотип городка Седона">
+                </a>
+                <ul class="site-navigation">
+                    <li><a href="blank.html">Информация</a></li>
+                    <li><a href="blank.html">Фото и видео</a></li>
+                    <li><a href="blank.html">Карта штата</a></li>
+                    <li><a href="hotels.html">Гостиницы</a></li>
+                </ul>
+            </nav>
+        </header>
+        <main class="content-container">
+            <section class="description">
+                <h1 class="description__header">Седона&nbsp;&mdash; небольшой городок в&nbsp;Аризоне, заслуживающий большего!</h1>
+                <p class="description__content">Рассмотрим 5&nbsp;причин, по&nbsp;которым Седона круче, чем Гранд Каньон!</p>
+            </section>
+            <section class="reasons">
+                <h2 class="reasons__header--hidden">Почему надо посетить городок Седона</h2>
+                <ol class="reasons-list">
+                    <li class="reasons-list__item ">
+                        <h3 class="item-header">Настоящий городок</h3>
+                        <p class="item-number">— №1 —</p>
+                        <p class="item-content">Седона&nbsp;&mdash; не&nbsp;аттракцион для туристов, там течёт своя жизнь</p>
+                        <ul class="city-useful-list">
+                            <li class="city-useful-list__item">
+                                <h4 class="item-header">Жильё</h4>
+                                <p class="item-content">Рекомендуем пожить в&nbsp;настоящем мотеле, всё как в&nbsp;кино!</p>
+                            </li>
+                            <li class="city-useful-list__item">
+                                <h4 class="item-header">Еда</h4>
+                                <p class="item-content">Всегда заказывайте фирменный бургер, вы&nbsp;не&nbsp;разочаруетесь!</p>
+                            </li>
+                            <li class="city-useful-list__item">
+                                <h4 class="item-header">Сувениры</h4>
+                                <p class="item-content">Не&nbsp;только китайского, но&nbsp;и&nbsp;местного производства!</p>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="reasons-list__item">
+                        <h3 class="item-header">Там есть Мост дьявола</h3>
+                        <p class="item-number">— №2 —</p>
+                        <p class="item-content">Да, по&nbsp;нему можно пройти! Если конечно вы&nbsp;осмелитесь</p>
+                    </li>
+                    <li class="reasons-list__item">
+                        <h3 class="item-header">небольшая площадь</h3>
+                        <p class="item-number">— №3 —</p>
+                        <p class="item-content">все достопримечательности находятся очень близко</p>
+                    </li>
+                    <li class="reasons-list__item">
+                        <h3 class="item-header">красивая дорога</h3>
+                        <p class="item-number">— №4 —</p>
+                        <p class="item-content">ехать в&nbsp;седону из&nbsp;лас-вегаса совсем не&nbsp;скучно!</p>
+                    </li>
+                    <li class="reasons-list__item">
+                        <h3 class="item-header">мало<br>туристов</h3>
+                        <p class="item-number">— №5 —</p>
+                        <p class="item-content">большинство едет в&nbsp;гранд каньон и&nbsp;толпится там</p>
+                    </li>
+                </ol>
+            </section>
+            <section>
+                <h2>Заинтересовались?</h2>
+                <p>Укажите предполагаемые даты поездки, и&nbsp;мы&nbsp;покажем вам лучшие предложения гостиниц в&nbsp;Седоне</p>
+                <button type="button">Поиск гостиницы в Седоне</button>
+                <section>
+                    <h2 class="hidden">Поиск гостиницы в Седоне</h2>
+                    <!-- Здесь будет форма поиска -->
+                    <button type="button">Найти</button>
+                </section>
+            </section>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52385.18050600227!2d-111.83015813851428!3d34.85437338099179!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1599930496020!5m2!1sru!2sru"
+                width="1199" height="594" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+        </main>
+        <footer>
+            <section>
+                <h2 class="hidden">Контакты.</h2>
+                <p>
+                    <a href="#">#visitSEDONA</a><br> ТЕЛ: <a href="tel:+74956660166">+7 (495) 666-01-66</a>
+                </p>
+            </section>
+            <section>
+                <h2 class="hidden">Мы в социальных сетях.</h2>
+                <ul>
+                    <li>
+                        <a href="#">Твиттер</a>
+                    </li>
+                    <li>
+                        <a href="#">Фейсбук</a>
+                    </li>
+                    <li>
+                        <a href="#">Ютуб</a>
+                    </li>
+                </ul>
+            </section>
+            <section>
+                <h2 class="hidden">Разработчики сайта.</h2>
+                <p>
+                    Website by
+                    <a href="https://htmlacademy.ru">HTML Academy</a>
+                </p>
+            </section>
+        </footer>
+    </div>
 </body>
 
 </html>
