--- a/blank.html
+++ b/blank.html
@@ -2,58 +2,60 @@
 <html lang="ru">
 
 <head>
-  <meta charset="utf-8">
-  <title>Отели - Седона</title>
+    <meta charset="utf-8">
+    <title>Отели - Седона</title>
+    <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
+    <link href="css/normalize.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
 </head>
 
-<body>
-  <header>
-    <nav>
-      <a href="index.html">
-        <img src="https://via.placeholder.com/138x70"  alt="Логотип городка Седона">
-      </a>
-      <ul>
-        <li><a href="blank.html">Информация</a></li>
-        <li><a href="blank.html">Фото и видео</a></li>
-        <li><a href="blank.html">Карта штата</a></li>
-        <li><a href="hotels.html">Гостиницы</a></li>
-      </ul>
-    </nav>
-  </header>
-  <main>
-    <h1>Страница находится в разработке!</h1>
-  </main>
-  <footer>
-    <section>
-      <h2 class="hidden">Контакты.</h2>
-      <p>
-        <a href="blank.html">#visitSEDONA</a><br>
-        ТЕЛ: <a href="tel:+74956660166">+7 (495) 666-01-66</a>
-      </p>
-    </section>
-    <section>
-      <h2 class="hidden">Мы в социальных сетях.</h2>
-      <ul>
-        <li>
-          <a href="#">Твиттер</a>
-        </li>
-        <li>
-          <a href="#">Фейсбук</a>
-        </li>
-        <li>
-          <a href="#">Ютуб</a>
-        </li>
-      </ul>
-    </section>
-    <section>
-      <h2 class="hidden">Разработчики сайта.</h2>
-      <p>
-        Website by
-        <a href="https://htmlacademy.ru">HTML Academy</a>
-      </p>
-    </section>
-  </footer>
-  
+<body class="page-body">
+    <header class="main-header">
+        <nav class="main-navigation">
+            <a class="logo" href="index.html">
+                <img src="https://via.placeholder.com/138x70" width="138" height="70" alt="Логотип городка Седона">
+            </a>
+            <ul class="site-navigation">
+                <li class="site-navigation__item"><a class="site-navigation__link" href="blank.html">Информация</a></li>
+                <li class="site-navigation__item"><a class="site-navigation__link" href="blank.html">Фото и видео</a></li>
+                <li class="site-navigation__item"><a class="site-navigation__link" href="blank.html">Карта штата</a></li>
+                <li class="site-navigation__item"><a class="site-navigation__link" href="hotels.html">Гостиницы</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <h1>Страница находится в разработке!</h1>
+    </main>
+    <footer>
+        <section>
+            <h2 class="hidden">Контакты.</h2>
+            <p>
+                <a href="blank.html">#visitSEDONA</a><br> ТЕЛ: <a href="tel:+74956660166">+7 (495) 666-01-66</a>
+            </p>
+        </section>
+        <section>
+            <h2 class="hidden">Мы в социальных сетях.</h2>
+            <ul>
+                <li>
+                    <a href="#">Твиттер</a>
+                </li>
+                <li>
+                    <a href="#">Фейсбук</a>
+                </li>
+                <li>
+                    <a href="#">Ютуб</a>
+                </li>
+            </ul>
+        </section>
+        <section>
+            <h2 class="hidden">Разработчики сайта.</h2>
+            <p>
+                Website by
+                <a href="https://htmlacademy.ru">HTML Academy</a>
+            </p>
+        </section>
+    </footer>
+
 </body>
 
 </html>
