--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
                     <img src="https://via.placeholder.com/138x70" width="138" height="70" alt="Логотип городка Седона">
                 </a>
                 <ul class="site-navigation">
-                    <li><a href="blank.html">Информация</a></li>
-                    <li><a href="blank.html">Фото и видео</a></li>
-                    <li><a href="blank.html">Карта штата</a></li>
-                    <li><a href="hotels.html">Гостиницы</a></li>
+                    <li class="site-navigation__item"><a class="site-navigation__link" href="blank.html">Информация</a></li>
+                    <li class="site-navigation__item"><a class="site-navigation__link" href="blank.html">Фото и видео</a></li>
+                    <li class="site-navigation__item"><a class="site-navigation__link" href="blank.html">Карта штата</a></li>
+                    <li class="site-navigation__item"><a class="site-navigation__link" href="hotels.html">Гостиницы</a></li>
                 </ul>
             </nav>
         </header>
@@ -32,7 +32,7 @@
             <section class="reasons">
                 <h2 class="reasons__header--hidden">Почему надо посетить городок Седона</h2>
                 <ol class="reasons-list">
-                    <li class="reasons-list__item ">
+                    <li class="reasons-list__item reasons-list__item--left">
                         <h3 class="item-header">Настоящий городок</h3>
                         <p class="item-number">— №1 —</p>
                         <p class="item-content">Седона&nbsp;&mdash; не&nbsp;аттракцион для туристов, там течёт своя жизнь</p>
@@ -51,67 +51,67 @@
                             </li>
                         </ul>
                     </li>
-                    <li class="reasons-list__item">
+                    <li class="reasons-list__item reasons-list__item--right">
                         <h3 class="item-header">Там есть Мост дьявола</h3>
                         <p class="item-number">— №2 —</p>
                         <p class="item-content">Да, по&nbsp;нему можно пройти! Если конечно вы&nbsp;осмелитесь</p>
                     </li>
-                    <li class="reasons-list__item">
+                    <li class="reasons-list__item reasons-list__item--gray">
                         <h3 class="item-header">небольшая площадь</h3>
                         <p class="item-number">— №3 —</p>
                         <p class="item-content">все достопримечательности находятся очень близко</p>
                     </li>
-                    <li class="reasons-list__item">
+                    <li class="reasons-list__item reasons-list__item--gray">
                         <h3 class="item-header">красивая дорога</h3>
                         <p class="item-number">— №4 —</p>
                         <p class="item-content">ехать в&nbsp;седону из&nbsp;лас-вегаса совсем не&nbsp;скучно!</p>
                     </li>
-                    <li class="reasons-list__item">
+                    <li class="reasons-list__item reasons-list__item--gray">
                         <h3 class="item-header">мало<br>туристов</h3>
                         <p class="item-number">— №5 —</p>
                         <p class="item-content">большинство едет в&nbsp;гранд каньон и&nbsp;толпится там</p>
                     </li>
                 </ol>
             </section>
-            <section>
-                <h2>Заинтересовались?</h2>
-                <p>Укажите предполагаемые даты поездки, и&nbsp;мы&nbsp;покажем вам лучшие предложения гостиниц в&nbsp;Седоне</p>
-                <button type="button">Поиск гостиницы в Седоне</button>
-                <section>
+            <section class="interesting">
+                <h2 class="interesting__header">Заинтересовались?</h2>
+                <p class="interesting__content">Укажите предполагаемые даты поездки, и&nbsp;мы&nbsp;покажем вам лучшие предложения гостиниц в&nbsp;Седоне</p>
+                <button class="interesting__search" type="button">Поиск гостиницы в Седоне</button>
+                <section class="interesting__form interesting-form">
                     <h2 class="hidden">Поиск гостиницы в Седоне</h2>
                     <!-- Здесь будет форма поиска -->
-                    <button type="button">Найти</button>
+                    <button class="interesting-form__find" type="button">Найти</button>
                 </section>
             </section>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52385.18050600227!2d-111.83015813851428!3d34.85437338099179!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1599930496020!5m2!1sru!2sru"
+            <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52385.18050600227!2d-111.83015813851428!3d34.85437338099179!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1599930496020!5m2!1sru!2sru"
                 width="1199" height="594" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
         </main>
-        <footer>
-            <section>
-                <h2 class="hidden">Контакты.</h2>
-                <p>
-                    <a href="#">#visitSEDONA</a><br> ТЕЛ: <a href="tel:+74956660166">+7 (495) 666-01-66</a>
+        <footer class="main-footer">
+            <section class="main-footer__contacts">
+                <h2 class="contacts__header hidden">Контакты.</h2>
+                <p class="contacts">
+                    <a class="contacts__link" href="#">#visitSEDONA</a><br> ТЕЛ: <a class="contacts_link" href="tel:+74956660166">+7 (495) 666-01-66</a>
                 </p>
             </section>
-            <section>
-                <h2 class="hidden">Мы в социальных сетях.</h2>
-                <ul>
-                    <li>
-                        <a href="#">Твиттер</a>
+            <section class="main-footer__social">
+                <h2 class="social_hedaer hidden">Мы в социальных сетях.</h2>
+                <ul class="social__list">
+                    <li class="social__item">
+                        <a class="social__link" href="#">Твиттер</a>
                     </li>
-                    <li>
-                        <a href="#">Фейсбук</a>
+                    <li class="social__item">
+                        <a class="social__link" href="#">Фейсбук</a>
                     </li>
-                    <li>
-                        <a href="#">Ютуб</a>
+                    <li class="social__item">
+                        <a class="social__link" href="#">Ютуб</a>
                     </li>
                 </ul>
             </section>
-            <section>
-                <h2 class="hidden">Разработчики сайта.</h2>
-                <p>
+            <section class="developer">
+                <h2 class="developer__header hidden">Разработчики сайта.</h2>
+                <p class="developer__content">
                     Website by
-                    <a href="https://htmlacademy.ru">HTML Academy</a>
+                    <a class="developer__link" href="https://htmlacademy.ru">HTML Academy</a>
                 </p>
             </section>
         </footer>
