Исправлена ссылка на главную страницу в шапке

--- a/hotels.html
+++ b/hotels.html
@@ -13,7 +13,7 @@
   <div class="page-container">
     <header class="main-header">
       <nav class="main-navigation">
-        <a class="logo">
+        <a class="logo" href="index.html">
           <img src="https://via.placeholder.com/138x70" width="138" height="70" alt="Логотип городка Седона">
         </a>
         <ul class="site-navigation">
