--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <p class="description__content">Рассмотрим 5&nbsp;причин, по&nbsp;которым Седона круче, чем Гранд Каньон!</p>
       </section>
       <section class="reasons">
-        <h2 class="reasons__header--hidden">Почему надо посетить городок Седона</h2>
+        <h2 class="header-for-robots-and-readers">Почему надо посетить городок Седона</h2>
         <ol class="reasons-list">
           <li class="reasons-list__item reasons-list__item--left">
             <h3 class="item-header">Настоящий городок</h3>
@@ -79,7 +79,7 @@
         <p class="interesting__content">Укажите предполагаемые даты поездки, и&nbsp;мы&nbsp;покажем вам лучшие предложения гостиниц в&nbsp;Седоне</p>
         <button class="interesting__search" type="button">Поиск гостиницы в Седоне</button>
         <section class="interesting__form interesting-form">
-          <h2 class="hidden">Поиск гостиницы в Седоне</h2>
+          <h2 class="header-for-robots-and-readers">Поиск гостиницы в Седоне</h2>
           <!-- Здесь будет форма поиска -->
           <button class="interesting-form__find" type="button">Найти</button>
         </section>
@@ -89,13 +89,13 @@
     </main>
     <footer class="main-footer">
       <section class="main-footer__contacts">
-        <h2 class="contacts__header hidden">Контакты.</h2>
+        <h2 class="header-for-robots-and-readers">Контакты.</h2>
         <p class="contacts">
           <a class="contacts__link" href="#">#visitSEDONA</a><br> ТЕЛ: <a class="contacts__link" href="tel:+74956660166">+7 (495) 666-01-66</a>
         </p>
       </section>
       <section class="main-footer__social">
-        <h2 class="social_hedaer hidden">Мы в социальных сетях.</h2>
+        <h2 class="header-for-robots-and-readers">Мы в социальных сетях.</h2>
         <ul class="social__list">
           <li class="social__item">
             <a class="social__link" href="#">Твиттер</a>
@@ -109,7 +109,7 @@
         </ul>
       </section>
       <section class="developer">
-        <h2 class="developer__header hidden">Разработчики сайта.</h2>
+        <h2 class="header-for-robots-and-readers">Разработчики сайта.</h2>
         <p class="developer__content">
           Website by
           <a class="developer__link" href="https://htmlacademy.ru">
