--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header class="main-header">
       <nav class="main-navigation">
         <a class="logo" href="#">
-          <img src="https://via.placeholder.com/138x70" width="138" height="70" alt="Логотип городка Седона">
+          <img src="img/site_logo.png" width="138" height="70" alt="Логотип городка Седона">
         </a>
         <ul class="site-navigation">
           <li class="site-navigation__item"><a class="site-navigation__link" href="blank.html">Информация</a></li>
@@ -25,6 +25,9 @@
       </nav>
     </header>
     <main class="content-container">
+      <div class="poster">
+        <img class="poster__text" src="img/sedona_logo.svg" width="456" height="350" alt="Welkom to SEDONA">
+      </div>
       <section class="description">
         <h1 class="description__header">Седона&nbsp;&mdash; небольшой городок в&nbsp;Аризоне, заслуживающий большего!
         </h1>
@@ -84,8 +87,10 @@
           <button class="interesting-form__find" type="button">Найти</button>
         </section>
       </section>
-      <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52385.18050600227!2d-111.83015813851428!3d34.85437338099179!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1599930496020!5m2!1sru!2sru"
-        width="1199" height="594" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+      <div class="map-container">
+        <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52385.18050600227!2d-111.83015813851428!3d34.85437338099179!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1599930496020!5m2!1sru!2sru"
+          width="1199" height="594" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+      </div>
     </main>
     <footer class="main-footer">
       <section class="footer-item-container">
