список достопримечательностей на гридах

--- a/index.html
+++ b/index.html
@@ -37,9 +37,11 @@
         <h2 class="header-for-robots-and-readers">Почему надо посетить городок Седона</h2>
         <ol class="reasons-list">
           <li class="reasons-list__item reasons-list__item--left">
-            <h3 class="item-header">Настоящий городок</h3>
-            <p class="item-number">— №1 —</p>
-            <p class="item-content">Седона&nbsp;&mdash; не&nbsp;аттракцион для туристов, там течёт своя жизнь</p>
+            <div class="item-container">
+              <h3 class="item-header">Настоящий городок</h3>
+              <p class="item-number">— №1 —</p>
+              <p class="item-content">Седона&nbsp;&mdash; не&nbsp;аттракцион для туристов, там течёт своя жизнь</p>
+            </div>
             <ul class="city-useful-list">
               <li class="city-useful-list__item">
                 <h4 class="item-header">Жильё</h4>
