sorting в одну строку

--- a/hotels.html
+++ b/hotels.html
@@ -30,13 +30,15 @@
         <button class="search__show-button" type="button">Показать</button>
       </section>
       <section class="sorting">
-        <h3 class="sorting__result-text">Найдено: 3</h3>
-        <p class="sorting__name">Сортировка:</p>
-        <a class="sorting__text-link sorting__text-link_active" href="#">По цене</a>
-        <a class="sorting__text-link" href="#">По типу</a>
-        <a class="sorting__text-link" href="#">По рейтингу</a>
-        <a class="sorting__pic-link" href="#">&#9650;</a>
-        <a class="sorting__pic-link sorting__pic-link_active" href="#">&#9660;</a>
+        <div class="centering-content">
+          <h3 class="sorting__result-text">Найдено: 3</h3>
+          <p class="sorting__name">Сортировка:</p>
+          <a class="sorting__text-link sorting__text-link_active" href="#">По цене</a>
+          <a class="sorting__text-link" href="#">По типу</a>
+          <a class="sorting__text-link" href="#">По рейтингу</a>
+          <a class="sorting__pic-link" href="#">&#9650;</a>
+          <a class="sorting__pic-link sorting__pic-link_active" href="#">&#9660;</a>
+        </div>
       </section>
       <section class="result-conteiner">
         <h1 class="header-for-robots-and-readers">Отели Седоны</h1>
