список отелей на гридах

--- a/hotels.html
+++ b/hotels.html
@@ -45,50 +45,47 @@
         <article class="hotels-item">
           <a class="hotels-item__link" href="blank.html">
             <h3 class="hotels-item__name">Amara Resort & Spa</h3>
+          </a>
+          <a class="hotels-item__link" href="blank.html">
             <img class="hotels-item__img" src="img/hotel_1.jpg" width="135" height="90" alt="Amara Resort & Spa">
           </a>
-          <p class="hotels-item__type">
-            Гостиница От 4000 Р.
-          </p>
-          <p class="hotels-item__buttons">
+          <div class="hotels-item__info-block">
+            <span class="hotels-item__type">Гостиница</span>
+            <span class="hotels-item__price">От 4000 Р.</span>
             <a class="hotels-item__detail" href="blank.html">Подробнее</a>
             <a class="hotels-item__reserv" href="blank.html">Забронировать</a>
-          </p>
-          <p class="hotels-item__rating">
-            Рейтинг: 8,5
-          </p>
+          </div>
+          <span class="hotels-item__rating">Рейтинг: 8,5</span>
         </article>
         <article class="hotels-item">
           <a class="hotels-item__link" href="blank.html">
             <h3 class="hotels-item__name">Desert Quail Inn</h3>
+          </a>
+          <a class="hotels-item__link" href="blank.html">
             <img class="hotels-item__img" src="img/hotel_2.jpg" width="135" height="90" alt="Desert Quail Inn">
           </a>
-          <p class="hotels-item__type">
-            Мотель От 3000 Р.
-          </p>
-          <p class="hotels-item__buttons">
+          <div class="hotels-item__info-block">
+            <span class="hotels-item__type">Мотель</span>
+            <span class="hotels-item__price">От 3000 Р.</span>
             <a class="hotels-item__detail" href="blank.html">Подробнее</a>
             <a class="hotels-item__reserv" href="blank.html">Забронировать</a>
-          </p>
-          <p class="hotels-item__rating">
-            Рейтинг: 8,9
-          </p>
+          </div>
+          <span class="hotels-item__rating">Рейтинг: 8,9</span>
         </article>
         <article class="hotels-item">
           <a class="hotels-item__link" href="blank.html">
             <h3 class="hotels-item__name">Villas at Poco Diablo</h3>
+          </a>
+          <a class="hotels-item__link" href="blank.html">
             <img class="hotels-item__img" src="img/hotel_3.jpg" width="135" height="90" alt="Villas at Poco Diablo">
           </a>
-          <p class="hotels-item__type">
-            Апартаменты От 2000 Р.
-          </p>
-          <p class="hotels-item__buttons">
+          <div class="hotels-item__info-block">
+            <span class="hotels-item__type">Апартаменты</span>
+            <span class="hotels-item__price">От 2000 Р.</span>
             <a class="hotels-item__detail" href="blank.html">Подробнее</a>
             <a class="hotels-item__reserv" href="blank.html">Забронировать</a>
-          </p>
-          <p class="hotels-item__rating">
-            Рейтинг: 9,2
-          </p>
+          </div>
+          <p class="hotels-item__rating">Рейтинг: 9,2</p>
         </article>
       </section>
     </main>
