звездочки в рейтинг и бэкграунд для большого фильтра

--- a/hotels.html
+++ b/hotels.html
@@ -55,7 +55,7 @@
             <a class="hotels-item__detail" href="blank.html">Подробнее</a>
             <a class="hotels-item__reserv" href="blank.html">Забронировать</a>
           </div>
-          <span class="hotels-item__rating">Рейтинг: 8,5</span>
+          <span class="hotels-item__rating for_star">Рейтинг: 8,5</span>
         </article>
         <article class="hotels-item">
           <a class="hotels-item__link" href="blank.html">
@@ -70,7 +70,7 @@
             <a class="hotels-item__detail" href="blank.html">Подробнее</a>
             <a class="hotels-item__reserv" href="blank.html">Забронировать</a>
           </div>
-          <span class="hotels-item__rating">Рейтинг: 8,9</span>
+          <span class="hotels-item__rating three_star">Рейтинг: 8,9</span>
         </article>
         <article class="hotels-item">
           <a class="hotels-item__link" href="blank.html">
@@ -85,7 +85,7 @@
             <a class="hotels-item__detail" href="blank.html">Подробнее</a>
             <a class="hotels-item__reserv" href="blank.html">Забронировать</a>
           </div>
-          <p class="hotels-item__rating">Рейтинг: 9,2</p>
+          <p class="hotels-item__rating two_star">Рейтинг: 9,2</p>
         </article>
       </section>
     </main>
