--- a/index.html
+++ b/index.html
@@ -43,15 +43,15 @@
               <p class="item-content">Седона&nbsp;&mdash; не&nbsp;аттракцион для туристов, там течёт своя жизнь</p>
             </div>
             <ul class="city-useful-list">
-              <li class="city-useful-list__item">
+              <li class="city-useful-list__item city-useful-list__item--home">
                 <h4 class="item-header">Жильё</h4>
                 <p class="item-content">Рекомендуем пожить в&nbsp;настоящем мотеле, всё как в&nbsp;кино!</p>
               </li>
-              <li class="city-useful-list__item">
+              <li class="city-useful-list__item city-useful-list__item--eat">
                 <h4 class="item-header">Еда</h4>
                 <p class="item-content">Всегда заказывайте фирменный бургер, вы&nbsp;не&nbsp;разочаруетесь!</p>
               </li>
-              <li class="city-useful-list__item">
+              <li class="city-useful-list__item city-useful-list__item--gift">
                 <h4 class="item-header">Сувениры</h4>
                 <p class="item-content">Не&nbsp;только китайского, но&nbsp;и&nbsp;местного производства!</p>
               </li>
