поправила состояние checked disabled

--- a/hotels.html
+++ b/hotels.html
@@ -33,7 +33,7 @@
           <label for="swim">Бассейн</label>
           <input id="parking" class="search__input-checkbox visually-hidden" type="checkbox">
           <label for="parking">Парковка</label>
-          <input id="wifi" class="search__input-checkbox visually-hidden" type="checkbox" disabled>
+          <input id="wifi" class="search__input-checkbox visually-hidden" type="checkbox">
           <label for="wifi">Wi-Fi</label>
         </fieldset>
         <fieldset class="search__block-item">
@@ -42,7 +42,7 @@
           <label for="hotel">Гостиница</label>
           <input id="motel" class="search__input-checkbox visually-hidden" type="checkbox" checked>
           <label for="motel">Мотель</label>
-          <input id="apart" class="search__input-checkbox visually-hidden" type="checkbox" disabled checked>
+          <input id="apart" class="search__input-checkbox visually-hidden" type="checkbox">
           <label for="apart">Апартаменты</label>
         </fieldset>
         <fieldset class="search__block-item">
