--- a/hotels.html
+++ b/hotels.html
@@ -43,7 +43,7 @@
             <label for="hotel">Гостиница</label>
             <input id="motel" class="search__input-checkbox visually-hidden" type="checkbox" checked>
             <label for="motel">Мотель</label>
-            <input id="apart" class="search__input-checkbox visually-hidden" type="checkbox">
+            <input id="apart" class="search__input-checkbox visually-hidden" type="checkbox" checked>
             <label for="apart">Апартаменты</label>
           </fieldset>
           <fieldset class="search__block-item">
