pixel perfect hotels.html

--- a/hotels.html
+++ b/hotels.html
@@ -126,7 +126,7 @@
             <a class="hotels-item__detail" href="blank.html">Подробнее</a>
             <a class="hotels-item__reserv" href="blank.html">Забронировать</a>
           </div>
-          <p class="hotels-item__rating two_star">Рейтинг: 9,2</p>
+          <span class="hotels-item__rating two_star">Рейтинг: 9,2</span>
         </article>
       </section>
     </main>
