--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
       <section class="interesting">
         <h2 class="interesting__header">Заинтересовались?</h2>
         <p class="interesting__content">Укажите предполагаемые даты поездки,<br>и&nbsp;мы&nbsp;покажем вам лучшие предложения гостиниц в&nbsp;Седоне</p>
-        <button class="interesting__search" type="button">Поиск гостиницы в Седоне</button>
-        <form class="search-form" action="https://echo.htmlacademy.ru" method="get">
+        <button id="hotels-search" class="interesting__search" type="button">Поиск гостиницы в Седоне</button>
+        <form id="hotels-search-form" class="search-form" action="https://echo.htmlacademy.ru" method="get">
           <!-- Здесь будет форма поиска -->
           <p class="search-form__item">
             <label for="search-form__check-in-date">Дата заезда:</label>
