исправен выезд формы

--- a/index.html
+++ b/index.html
@@ -85,7 +85,10 @@
         <h2 class="interesting__header">Заинтересовались?</h2>
         <p class="interesting__content">Укажите предполагаемые даты поездки,<br>и&nbsp;мы&nbsp;покажем вам лучшие предложения гостиниц в&nbsp;Седоне</p>
         <button id="hotels-search" class="interesting__search" type="button">Поиск гостиницы в Седоне</button>
-        <form id="hotels-search-form" class="search-form" action="https://echo.htmlacademy.ru" method="get">
+
+      </section>
+      <div class="map-and-form-container">
+        <form id="hotels-search-form" class="search-form" action="https://echo.htmlacademy.ru/" method="get">
           <!-- Здесь будет форма поиска -->
           <p class="search-form__item">
             <label for="search-form__check-in-date">Дата заезда:</label>
@@ -109,12 +112,13 @@
             <input id="search-form__children" type="number" name="children" min="0" value="0">
             <svg class="search-form__input-btn search-form__input-btn--add" tabindex="0" width="11" height="11" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M4.23 6.77V11h2.54V6.77H11V4.23H6.77V0H4.23v4.23H0v2.54h4.23z" fill="#A9A9A9"/></svg>
           </p>
-          <button class="search-form__find" type="button">Найти</button>
+          <input class="search-form__find" type="submit" value="Найти">
         </form>
-      </section>
-      <div class="map-container">
-        <div id="map" class="map"></div>
+        <div class="map-container">
+          <div id="map" class="map"></div>
+        </div>
       </div>
+
     </main>
     <footer class="main-footer">
       <section class="footer-item-container">
