поменяла input на button

--- a/hotels.html
+++ b/hotels.html
@@ -65,7 +65,7 @@
                 <div class="search__toggle search__toggle--max" tabindex="0"></div>
               </div>
             </div>
-            <input class="search__show-button" type="submit" value="Показать">
+            <button class="search__show-button" type="submit">Показать</button>
           </fieldset>
         </form>
 
