--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             <input id="search-form__children" type="number" name="children" min="0" value="0">
             <svg class="search-form__input-btn search-form__input-btn--add" tabindex="0" width="11" height="11" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M4.23 6.77V11h2.54V6.77H11V4.23H6.77V0H4.23v4.23H0v2.54h4.23z" fill="#A9A9A9"/></svg>
           </p>
-          <input class="search-form__find" type="submit" value="Найти">
+          <button class="search-form__find" type="submit">Найти</button>
         </form>
         <div class="map-container">
           <div id="map" class="map"></div>
